<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.main.AddTurmaFragment">

    <data>
        <variable
            name="addAlunoFragment"
            type="com.jafan.cfteaching.ui.main.AddAlunoFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/titulo_dados_da_turma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/dados_do_grupo"
                android:textSize="18sp"
                android:textColor="@color/usa_blue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nome_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/nome"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/titulo_dados_da_turma"
                app:layout_constraintEnd_toEndOf="parent">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nome_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPersonName"
                    android:singleLine="true"/>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/curso_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/curso"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nome_label"
                app:layout_constraintEnd_toEndOf="parent">

                <AutoCompleteTextView
                    android:id="@+id/curso_dropdown"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.checkbox.MaterialCheckBox
                android:id="@+id/ativo_check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/grupo_ativo"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/curso_label"/>


            <View
                android:id="@+id/divider_ativo"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?attr/dividerHorizontal"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@id/ativo_check"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/titulo_dados_financeiros"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/dados_das_aulas"
                android:textSize="18sp"
                android:textColor="@color/usa_blue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider_ativo"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/valor_hora_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:hint="@string/valor_da_hora"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                app:prefixText="R$ "
                app:layout_constraintTop_toBottomOf="@id/titulo_dados_financeiros"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/duracao_aula_label">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/valor_hora_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:singleLine="true"
                    android:inputType="numberDecimal"/>


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/duracao_aula_label"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                android:hint="@string/duracao"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
                app:layout_constraintTop_toBottomOf="@id/titulo_dados_financeiros"
                app:layout_constraintStart_toEndOf="@id/valor_hora_label"
                app:layout_constraintBottom_toBottomOf="@id/valor_hora_label"
                app:layout_constraintEnd_toEndOf="parent">

                <AutoCompleteTextView
                    android:id="@+id/duracao_dropdown"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dias_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:hint="@string/dias_da_semana"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/valor_hora_label"
                app:layout_constraintEnd_toEndOf="parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/campo_dias_da_semana"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:focusable="false"
                    android:cursorVisible="false"
                    android:inputType="none"
                    android:onClick="@{() -> addAlunoFragment.diasDaSemanaDialog()}"
                    tools:text="Segunda, Terça, Quinta"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mes_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
                android:hint="@string/mes"
                app:layout_constraintTop_toBottomOf="@id/dias_label"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/ano_label">

                <AutoCompleteTextView
                    android:id="@+id/mes_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:singleLine="true"
                    tools:text="Jan" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/ano_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="8dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense.ExposedDropdownMenu"
                android:hint="@string/ano"
                app:layout_constraintTop_toBottomOf="@id/dias_label"
                app:layout_constraintStart_toEndOf="@id/mes_label"
                app:layout_constraintEnd_toEndOf="parent">

                <AutoCompleteTextView
                    android:id="@+id/ano_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:singleLine="true"
                    tools:text="2022"
                    android:inputType="number"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:text="@string/adicionar_alunos"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/mes_label"/>



        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>

